styles.css
#image > a {
    text-decoration: none;
    color: #E5E7EB;
    font-weight: bold;
    font-size: 16px;
}

#image {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    padding: 50px;
    color: #F9FAF8;
    font-size: 15px;
}

.head-container {
    padding: 10px 150px 100px;
    background-color: #1F2937;
}

.headers {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 30px;
    padding-bottom: 100px;
}

.header-logo {
    flex: 1;
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 950;
    text-decoration: none;
}

.header {
    color: #E5E7EB;
    text-decoration: none;
    font-weight: 500;
}

.hero-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.hero {
    display: flex;
    flex-direction: column;
    width: 40%;
    gap: 8px;
}

.header-image {
    width: 500px;
    height: 250px;
    color: #F9FAF8;
    background-color: #5a5e66;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-main {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 800;
}

.hero-second {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-sign-up {
    color: #F9FAF8;
    background-color: #3882F6;
    font-weight: bold;
    padding: 8px 1px;
    max-width: 30%;
    text-align: center;
    border-radius: 10px;
    text-decoration: none;
}

.random-info {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    margin-bottom: 40px;
    display: flex;
    justify-content: center;
}

.content-ctr-first {
    padding: 50px 200px 100px;
    background-color: #F9FAF8;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cards-ctr-first {
    display: flex;
    gap: 40px;
    flex-wrap: wrap;
}

.card-txt-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.card-img {
    border: 4px solid #3882F6;
    border-radius: 10px;
    width: 150px;
    height: 150px;
}

.txt-for-img {
    text-align: center;
    width: 150px;
}

.quote-container {
    background-color: #E5E7EB;
    padding: 150px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 30px;
}

.quote {
    font-size: 36px;
    color: #1F2937;
    font-weight: normal;
    font-style: italic;
    width: 900px;
}

.quote-author {
    font-size: 25px;
    font-weight: 800;
}

.call-to-action-ctr {
    background-color: #F9FAF8;
    padding: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cta-background {
    background-color: #3882F6;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px 150px;
    border-radius: 10px;
    gap: 100px;
}

.cta-text-col {
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.cta {
    color: #F9FAF8;
    font-size: 20px;
    font-weight: 800;
}

.cta-under {
    color: #E5E7EB;
}

.cta-sign-up {
    font-size: 18px;
    color: #F9FAF8;
    font-weight: 800;
    border: 2px solid #F9FAF8;
    border-radius: 8px;
    padding: 5px 30px;
    text-decoration: none;
}

body {
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

